solved second challenge

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   font-size: 1.3rem;
   display: grid;
   grid-template-columns: repeat(4, 25%);
-  grid-template-rows: 2rem 13rem auto;
+  grid-template-rows: 2rem auto;
   grid-gap: 0.2rem;
 }
 
@@ -27,11 +27,4 @@ body {
   grid-column: span 4;
   font-size: 1rem;
   overflow-y: auto;
-}
-
-.my-show-season {
-  font-size: 1.1rem;
-  padding: 0.1rem;
-  border: 0.1rem solid black;
-  background-color: lightyellow;
 }
